--- a/CurlingLeagueManager/UI/main_window.ui
+++ b/CurlingLeagueManager/UI/main_window.ui
@@ -2,23 +2,26 @@
 <ui version="4.0">
  <class>MainWindow</class>
  <widget class="QMainWindow" name="MainWindow">
+  <property name="windowModality">
+   <enum>Qt::WindowModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>561</width>
-    <height>503</height>
+    <width>467</width>
+    <height>465</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Curing League Manager</string>
+   <string>Curling League Manager</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>40</y>
+      <x>30</x>
+      <y>30</y>
       <width>404</width>
       <height>371</height>
      </rect>
@@ -38,7 +41,7 @@
             </font>
            </property>
            <property name="text">
-            <string>League Maintenance</string>
+            <string>Curling League Manager</string>
            </property>
            <property name="alignment">
             <set>Qt::AlignCenter</set>
@@ -119,7 +122,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>561</width>
+     <width>467</width>
      <height>21</height>
     </rect>
    </property>
