Working to input files. ISsues with indexing

--- a/CurlingLeagueManager/UI/edit_league_dialog2.ui
+++ b/CurlingLeagueManager/UI/edit_league_dialog2.ui
@@ -3,7 +3,7 @@
  <class>edit_league_dialog</class>
  <widget class="QDialog" name="edit_league_dialog">
   <property name="windowModality">
-   <enum>Qt::WindowModal</enum>
+   <enum>Qt::ApplicationModal</enum>
   </property>
   <property name="geometry">
    <rect>
